--- a/index.html
+++ b/index.html
@@ -12,54 +12,75 @@
 
 <body>
     <div class="container">
-        <h1>Conheça Americana!</h1>
-        <div class="lugar">
-            <h2>Comer no Rancho da costela</h2>
-            <p>
-                Um restaurante típico de fazenda. Além da consagrada costela "Mais Caminhos", ofertam deliciosos pratos,
-                sobremesas, café premium e chopp de qualidade. Tudo isso em um ambiente campestre, sereno e acolhedor.
-                Em
-                atividade desde 1996.</p>
-            <p>
-                Conheça mais sobre o Rancho da Costela visitando sua página no <a
-                    href="https://www.facebook.com/RanchodaCostelaSBO" target="blank">Facebook</a>.
-            </p>
-        </div>
+        <h1>
+            <a href="index.html">Conheça Americana!
+            </a>
+        </h1>
+        
+        <div class="lugares">
+            <div class="lugar">
+                <h2>Comer no Rancho da costela</h2>
+                <img src="imagens/rancho.png" alt="Fachada do rancho da costela" title="Rancho da Costela">
+                <p>
+                    Um restaurante típico de fazenda. Além da consagrada costela "Mais Caminhos", ofertam deliciosos
+                    pratos,
+                    sobremesas, café premium e chopp de qualidade. Tudo isso em um ambiente campestre, sereno e
+                    acolhedor.
+                    Em atividade desde 1996.</p>
+                <p>
+                    Conheça mais sobre o Rancho da Costela visitando sua página no <a
+                        href="https://www.facebook.com/RanchodaCostelaSBO" target="blank">Facebook</a>.
+                </p>
+                <div class="clear"></div>
+            </div>
 
-        <div class="lugar">
-            <h2>Fazer um piquenique no Parque dos Ipês</h2>
-            <p>
-                Tanto no fim de tarde quanto aos finais de semana o Parque dos Ipês é sempre um bom local para passar um
-                tempo
-                com a família.
-            </p>
-            <p>
-                Descubra mais sobre o Parque dos Ipês pesquisando no <a
-                    href="https://www.google.com/search?q=parque+dos+ipes+sbo" target="blank"> Google</a> sobre o local.
-            </p>
-        </div>
+            <div class="lugar">
+                <h2>Fazer um piquenique no Parque dos Ipês</h2>
+                <img src="imagens/ipes.png" alt="Parque dos Ipes" title="Parque dos Ipes">
+                <p>
+                    Tanto no fim de tarde quanto aos finais de semana o Parque dos Ipês é sempre um bom local para
+                    passar um
+                    tempo com a família.
+                </p>
+                <p>
+                    Descubra mais sobre o Parque dos Ipês pesquisando no <a
+                        href="https://www.google.com/search?q=parque+dos+ipes+sbo" target="blank"> Google</a> sobre o
+                    local.
+                </p>
+                <div class="clear"></div>
+            </div>
 
-        <div class="lugar">
-            <h2>Caminhar no Caminho dos Flamboyants</h2>
-            <p>Se exercitar é sempre algo recomendável, ainda mais se for em um local agradável e perto da natureza.
-            </p>
-            <p>Veja no <a
-                    href="https://www.google.com/maps/place/Caminho+dos+Flamboyants/@-22.7536199,-47.4337197,17z/data=!3m1!4b1!4m5!3m4!1s0x94c89d982e6fe5bd:0x58bf1a45b9da1bac!8m2!3d-22.7536249!4d-47.4315364"
-                    target="black">mapa</a> aonde fica esse local.
-            </p>
+            <div class="lugar">
+                <h2>Caminhar no Caminho dos Flamboyants</h2>
+                <img src="imagens/flamboyants.png" alt="Caminho dos Flamboyants" title="Caminho dos Flamboyants">
+                <p>
+                    Se exercitar é sempre algo recomendável, ainda mais se for em um local agradável e perto da
+                    natureza.
+                </p>
+                <p>Veja no <a
+                        href="https://www.google.com/maps/place/Caminho+dos+Flamboyants/@-22.7536199,-47.4337197,17z/data=!3m1!4b1!4m5!3m4!1s0x94c89d982e6fe5bd:0x58bf1a45b9da1bac!8m2!3d-22.7536249!4d-47.4315364"
+                        target="black">mapa</a> aonde fica esse local.
+                </p>
+                <div class="clear"></div>
+            </div>
         </div>
-
-        <div class="lugar">
+        <aside class="lateral">
             <h3>E existem muitos outros lugares interessantes na cidade...</h3>
-            <p>O bar Dona Beleza<br>
-                Cemitério dos Americanos<br>
-                A igreja matriz<br>
-                O teatro municipal<br>
-                O parque dos Jacarandás<br>
-            </p>
-        </div>
+            <ol>
+                <li>O bar Dona Beleza</li>
+                <li>Cemitério dos Americanos</li>
+                <li>A igreja matriz</li>
+                <li>O teatro municipal</li>
+                <li>O parque dos Jacarandás</li>
+            </ol>
+        </aside>
 
-    </div>
+        <footer class="rodape clear">
+            <p> Um guia você turistar por aqui! &#128150;
+                <br> Mariana da Fonseca &copy; &REG;
+            </p>
+        </footer>
+    </div> <!-- Aqui termina a div.container -->
 </body>
 
 </html>
